--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "johnny-five": "^1.4.0",
+    "mcp-spi-adc": "^3.1.0",
     "raspi-io": "^11.0.0"
   }
 }
